			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

17-Dec-2001
~~~~~~~~~~~
Gtk+-2.0 uses UTF-8 for strings. Translation files are now converted to
UTF-8 as they are loaded.
Added a missing #ifdef for the regex code (Couderc Damien).
All file leafnames now use AA fonts with Gtk+-2.0 (details are still
fixed, though).

16-Dec-2001
~~~~~~~~~~~
Closing a window with a keypress caused warnings to appear (reported by
Fabien Coutant).
Updated Spanish translation (Marcelo Ramos).
New 'Single click nagivation on the pinboard' option (requested by
Michael).
Fix for compiling problem on NetBSD (Eric Gillespie, Jr.).

Internal changes to options system:
- Options can be used as soon as they are registered (not just once the
  filer is fully initialised).
- New widget types can be registered in a modular fashion.

13-Dec-2001 (Release 1.1.9)
~~~~~~~~~~~
More fixes for panel resizing (reported by Stephen Watson).
Target mode, dragging an unselected item, and auto-selecting an item when
opening the menu now all work without grabbing the primary selection.
Finished new scanning code (image == NULL is now OK everywhere).

12-Dec-2001
~~~~~~~~~~~
Clicking on an item which is selected, but not part of the primary selection,
now reclaims the selection.
Removed default minibuffer option for now.
The dash forms in Find tests can be combined, eg '-rwx'.
Updated manual.

11-Dec-2001
~~~~~~~~~~~
Additional window hints - pinboard and panels refuse focus and pinboard
icons are marked as desktop features (requested by Laurent Moussault).
Thumbnails are now stored using an md5 hash of their names.
Pinboard icons can be repositioned by dragging with the left mouse button
(middle button drag stopped working with sawfish, and this is easier anyway).

10-Dec-2001
~~~~~~~~~~~
New scanning system: blank items are added to the window first and then the
icons and types get filled in later. Looks better and simplifies the sizing
code a bit.
Code tidying in various places.

09-Dec-2001