@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+18-Dec-2001
+~~~~~~~~~~~
+Updated to new version 0.4 of the thumbnails standard.
+Added 'Quiet' check box to action windows. Quiet button now turns on
+check box and does 'Yes'.
+
 17-Dec-2001
 ~~~~~~~~~~~
 Gtk+-2.0 uses UTF-8 for strings. Translation files are now converted to
